<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="@string/quiz_pref_category"
        android:title="@string/quiz_pref_category" >
        <EditTextPreference
            android:defaultValue="6"
            android:key="@string/number_pref"
            android:summary="@string/number_summary"
            android:title="@string/number_pref" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/key_pref_category"
        android:title="@string/key_pref_category" >
        <Preference
            android:key="@string/key_pref"
            android:summary="@string/pref_summary"
            android:title="@string/key_pref" />
        <Preference
            android:key="@string/key_reload"
            android:summary="@string/reload_summary"
            android:title="@string/key_reload" />
    </PreferenceCategory>

</PreferenceScreen>