<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <edu.rosehulman.namefacerecognizer.views.AspectRatioImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:src="@drawable/title"
        android:paddingLeft="20dip"
        android:paddingTop="20dip"
        android:paddingRight="20dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp" >

        <Button
            android:id="@+id/download_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_button_text" >
        </Button>

        <Button
            android:id="@+id/review_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/review_button_text" >
        </Button>

        <Button
            android:id="@+id/quiz_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_button_text" >
        </Button>

        <Button
            android:id="@+id/exit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_button_text" >
        </Button>
    </LinearLayout>

</RelativeLayout>